@@ -1,3 +1,6 @@
+Aug 07, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
+- add script install button
+
 Aug 01, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
 - add demo script
 
